--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
